docs/compilation/v1.7.0/_sources/pages/modules/sinergym.utils.wrappers.MultiObsWrapper.rst.txt
sinergym.utils.wrappers.MultiObsWrapper
=======================================

.. currentmodule:: sinergym.utils.wrappers

.. autoclass:: MultiObsWrapper
   :members:                                                           
   :undoc-members:               

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~MultiObsWrapper.__init__
      ~MultiObsWrapper.class_name
      ~MultiObsWrapper.close
      ~MultiObsWrapper.compute_reward
      ~MultiObsWrapper.render
      ~MultiObsWrapper.reset
      ~MultiObsWrapper.seed
      ~MultiObsWrapper.step
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~MultiObsWrapper.action_space
      ~MultiObsWrapper.metadata
      ~MultiObsWrapper.observation_space
      ~MultiObsWrapper.reward_range
      ~MultiObsWrapper.spec
      ~MultiObsWrapper.unwrapped
   
   