docs/compilation/v2.3.0/_sources/pages/modules/sinergym.utils.wrappers.MultiObsWrapper.rst.txt
sinergym.utils.wrappers.MultiObsWrapper
=======================================

.. currentmodule:: sinergym.utils.wrappers

.. autoclass:: MultiObsWrapper
   :members:                                                           
   :undoc-members:               

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~MultiObsWrapper.__init__
      ~MultiObsWrapper.class_name
      ~MultiObsWrapper.close
      ~MultiObsWrapper.get_wrapper_attr
      ~MultiObsWrapper.has_wrapper_attr
      ~MultiObsWrapper.render
      ~MultiObsWrapper.reset
      ~MultiObsWrapper.set_wrapper_attr
      ~MultiObsWrapper.step
      ~MultiObsWrapper.wrapper_spec
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~MultiObsWrapper.action_space
      ~MultiObsWrapper.metadata
      ~MultiObsWrapper.np_random
      ~MultiObsWrapper.np_random_seed
      ~MultiObsWrapper.observation_space
      ~MultiObsWrapper.render_mode
      ~MultiObsWrapper.spec
      ~MultiObsWrapper.unwrapped
   
   